<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/choosenCity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choosenCity_text"
        android:textSize="30dp"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="0.01"
        />

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/w001"
        android:layout_weight="0.5"
        />

    <TextView
        android:id="@+id/weather_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_text"
        android:textSize="50dp"
        android:layout_gravity="fill"
        android:layout_weight="0.5"
        />

    <Button
        android:id="@+id/button_sendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_sendMessage"
        android:layout_weight="0.01"
        />

</LinearLayout>